<resources>
    <string name="app_name">Phone</string>

    <string name="create_contact">Create New Contact</string>

    <string name="view_line_height">3sp</string>
    <string name="view_line_color">#71CBAD</string>

    add new contact//
    <string name="name">Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>

    //View Contact//


</resources>
