<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="5dp"
    android:paddingLeft="5dp" >

    <Button
        android:id="@+id/backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Back" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="Save" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@id/backbtn">

            <ImageView
                android:id="@+id/person"
                android:layout_width="72sp"
                android:layout_height="72sp"
                android:src="@drawable/ic_user_img"
                android:layout_gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@string/view_line_height"
                android:background="@string/view_line_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingTop="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@string/view_line_height"
                android:background="@string/view_line_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ems="12"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="10" />

                <Spinner
                    android:id="@+id/spnr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                </Spinner>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@string/view_line_height"
                android:background="@string/view_line_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/eMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@string/view_line_height"
                android:background="@string/view_line_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:paddingTop="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@string/view_line_height"
                android:background="@string/view_line_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

</RelativeLayout>